# mesh-tools

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md
cmake/: FindCNPY.cmake  FindFreeImage.cmake  FindGCO.cmake  FindOPEN3D.cmake  FindOpenCV.cmake  FindTCLAP.cmake  FindTIFF.cmake  FindxxxGMP.cmake  FindxxxMPFR.cmake
src/IO/: CImg.h  colmapIO.cpp  colmapIO.h  ethIO.cpp  ethIO.h  fileIO.cpp  fileIO.h  inputParser.cpp  inputParser.h  meshlab_project.cc  mvIO.cpp  mvIO.h  simplificationIO.cpp  simplificationIO.h  tinyxml2.cpp  ttIO.cpp  ttIO.h
src/base/: cgal_typedefs.h
src/colmap/: colmapInput.cpp  colmapInput.h  depthMapConverter.cpp  depthMapConverter.h
src/exe/: boundingBox.cpp  collapse.cpp  eth3d.cpp  eval.cpp  eval.h  exeOptions.h  feat.cpp  feat.h  gt.cpp  inputParser.cpp  inputParser.h  iso.cpp  labatut.cpp  normalEstimation.cpp  normalEstimation.h  occ2mesh.cpp  occ2mesh.h  omvs2npz.cpp  omvs2npz.h  sample.cpp  scan.cpp  scan.h  simplification.cpp  simplification.h  sure.cpp  vsa.cpp  watertightify.cpp
src/labatut/: main.cpp  main.h  rayTracingFacet.cpp  rayTracingFacet.h
src/learning/: graphLearning.cpp  graphLearning.h  learning.cpp  learning.h  learningIO.cpp  learningIO.h  learningIO_bin.cpp  learningIO_bin.h  learningMath.cpp  learningMath.h  learningRayTracing.cpp  learningRayTracingGroundTruth.cpp  learningRayTracingGroundTruth.h  rayTracing.cpp  rayTracing.h
src/poisson/: poisson.cpp  poisson.h
src/processing/: collisionDetection.h  edgeManifoldness.cpp  edgeManifoldness.h  evaluation.cpp  evaluation.h  field.cpp  field.h  graphCut.cpp  graphCut.h  meshProcessing.cpp  meshProcessing.h  normalAndSensorProcessing.cpp  normalAndSensorProcessing.h  pointManifoldness.cpp  pointSetProcessing.cpp  pointSetProcessing.h  rayTracingFacet.cpp  rayTracingFacet.h  rayTracingTet.cpp  rayTracingTet.h  rayTriIntersection.cpp  tetIntersection.cpp  tetIntersection.h  tetTracing2.cpp  tetTracingBB.cpp
src/util/: DistPointTriangle.h  args.hxx  endian.h  geometricOperations.cpp  geometricOperations.h  helper.cpp  helper.h
